# fastapi-multitenant

./: Dockerfile  README.md  base_models.py  database.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
controllers/user/: base_user.py
routers/: user.py
schemas/: __init__.py
schemas/output/: user.py
src/fastapi_multitenant/: __init__.py
tenant_a/: models.py
tenant_a/schemas/output/: user.py
